Fixed breakage with device-add form. This component was using only the template from entity-form and nothing else. When fieldsets were added to entity-form, this caused some breakage. Wasn't noticed since technically this component is not using entity-form, only the template. Copied scss and html files from entity-form so device-add could safely have it's own modifications without causing trouble. Wrapped fieldConfig inside a fieldset so look and feel and features can be consistent with entity-form. At some point this and all other forms should be converted to entity-form.

--- a/src/assets/styles/themes/ix-blue.scss
+++ b/src/assets/styles/themes/ix-blue.scss
@@ -415,6 +415,7 @@ tr.dx-row:nth-child(odd){
 //Entity Module Overrides
 
 entity-task .form-card.mat-card,
+device-edit .form-card.mat-card,
 entity-form .form-card.mat-card{
   max-width:960px;
   margin:0 auto;
